# lightning_wrappers

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  debug.py  pyproject.toml
.github/workflows/: gh-pages.yml
lightning_wrappers/: utils.py
lightning_wrappers/base/: __init__.py  classifier.py  dataset.py
lightning_wrappers/huggingface/: __init__.py  dataset.py
lightning_wrappers/timm/: __init__.py  classifier.py
lightning_wrappers/torch/: __init__.py  classifier.py
lightning_wrappers/torchvision/: __init__.py  builtin_dataset.py  classifier.py  dataset.py  folder_dataset.py
lightning_wrappers/transformers/: __init__.py  classifier.py
